# deep_grasp_vgu

./: .gitignore  .rosinstall  Dockerfile  Dockerfile.sample  Dockerfile.ur3_base  README.md  docker_build.sh  launch_dev.sh  launch_eval.sh  requirements.txt
deep_grasp_vgu/: CMakeLists.txt  package.xml  setup.cfg
deep_grasp_vgu/deep_grasp_cnn/: .gitignore  CMakeLists.txt  ggcnn_test-cornell_dataset.ipynb  ggcnn_test.ipynb  package.xml  setup.cfg  setup.py
deep_grasp_vgu/deep_grasp_cnn/cfg/: ggcnn_node.yaml  ggcnn_service.yaml
deep_grasp_vgu/deep_grasp_cnn/launch/: ggcnn.launch  grasp_control.launch  save_info.launch
deep_grasp_vgu/deep_grasp_cnn/scripts/: ggcnn_node.py  ggcnn_service.py  grasp_control.py  save_info.py
deep_grasp_vgu/deep_grasp_cnn/src/dougsm_helpers/: tf_helpers.py
deep_grasp_vgu/deep_grasp_cnn/src/ggcnn/: ggcnn_torch.py
deep_grasp_vgu/deep_grasp_cnn/src/utils/dataset_processing/: evaluation.py
deep_grasp_vgu/deep_grasp_control/: CMakeLists.txt  package.xml
deep_grasp_vgu/deep_grasp_control/cfg/: control_poses.yaml
deep_grasp_vgu/deep_grasp_control/launch/: open_loop_control.launch
deep_grasp_vgu/deep_grasp_control/scripts/: open_loop_control.py
deep_grasp_vgu/launch/: ggcnn.launch
deep_grasp_vgu/src/ggcnn/: ggcnn_torch.py
deep_grasp_vgu/src/nodes/: ggcnn_service.py
install_scripts/: docker.sh  docker_compose.sh  nvidia-docker.sh
